
********************************************************************************

  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (095) 787-6090

********************************************************************************

  January, 21 2017, 23:00
  deviceServiceVersion = 1013352
	
  [-] Fixed some errors
	  
********************************************************************************

  January, 20 2017, 14:40
  deviceServiceVersion = 1013351
	
  [-] Fixed some errors
	  
********************************************************************************

  January, 18 2017, 21:30
  deviceServiceVersion = 1013349
	
  [-] Fixed error "Socket closed"
  [+] Added directIO code SMFPTR_DIO_SET_DISCOUNT_AMOUNT = 0x3D to
      set receipt discount amount. Works in discount mode 2 only.
  
********************************************************************************

  January, 17 2017, 19:00
  deviceServiceVersion = 1013347
	
  [-] Fixed error with printNormal and printRecMessage
  
********************************************************************************

  January, 13 2017, 19:00
  deviceServiceVersion = 1013345
	
  [-] Fixed error with voided receipt
  
********************************************************************************

  January, 12 2017, 21:45
  deviceServiceVersion = 1013344
	
  [-] Added communication status report to standard Z report
  
********************************************************************************

  January, 11 2017, 20:30
  deviceServiceVersion = 1013340
	
  [-] Fixed error with Socket port sharing
  
********************************************************************************

  January, 11 2017, 16:30
  deviceServiceVersion = 1013339
	
  [+] Added nonfiscal document header printing
  
********************************************************************************

  January, 9 2017, 20:30
  deviceServiceVersion = 1013338
	