@@ -1,5 +1,5 @@
 package com.shtrih.util;
 
 public class ServiceVersion {
-    public static final String VERSION = "351";
+    public static final String VERSION = "352-5-gd7b60ed";
 }
