@@ -31,7 +31,7 @@
         <!--<prop name="portName" type="String" value="COM2"/> -->
         <!-- <prop name="portName" type="String" value="COM8"/> -->
         <!--Baudrate 2400;4800;9600;19200;38400;57600;115200;230400;460800 -->
-        <prop name="portName" type="String" value="COM25"/>
+        <prop name="portName" type="String" value="COM15"/>
 		
         <prop name="baudRate" type="String" value="115200"/>
         <!--Default department-->
